# linux_bash

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Makefile.mak  kubsh.deb  kubsh_history.txt  main.cpp  tmp  vfs.cpp  vfs.h
.github/workflows/: checking.yml
deb_build/DEBIAN/: control
